--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,10 @@
         "laravel/jetstream": "^4.0",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "tightenco/ziggy": "^1.0"
+        "psr/simple-cache": "^2.0",
+        "tightenco/ziggy": "^1.0",
+        "maatwebsite/excel": "^3.1.50"
+
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
